--- a/src/routes/About.css
+++ b/src/routes/About.css
@@ -1,4 +1,8 @@
-.about__container {
+
+
+
+/*
+.about {
     box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25),
       0 8px 16px -8px rgba(0, 0, 0, 0.3), 0 -6px 16px -6px rgba(0, 0, 0, 0.025);
     padding: 20px;
@@ -18,3 +22,5 @@
     display: block;
     margin-top: 10px;
   }
+
+  */
