--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -2,6 +2,7 @@
   height: 100%;
   display: flex;
   justify-content: center;
+  background-color: black;
 }
 
 .loader {
@@ -11,6 +12,7 @@
   justify-content: center;
   align-items: center;
   font-weight: 300;
+  color: white;
 }
 
 .movies {
@@ -18,7 +20,6 @@
   justify-content: space-between;
   align-items: flex-start;
   flex-wrap: wrap;
-  padding: 50px;
-  padding-top: 70px;
-  width: 80%;
+  padding-top: 100px;
+  width: 90%;
 }
